pridan scrollbar k predmetum

--- a/src/main/resources/about.html
+++ b/src/main/resources/about.html
@@ -1,15 +1,15 @@
-<p>Jak hrát
+<p>Jak hrat
 <p>  
 
-<br>V adventuře hrajete za rytíře, který byl pověřen, aby zachránil princeznu, která byla unesena
-<br>Gul’Danem z Vašeho království. Úkol je tedy princeznu zachránit. V adventuře jsou
-<br>předměty, některé jsou potřebné k poražení nepřátel, které se budou na cestě objevovat,
-<br>některé předměty jsou zbytečné či nepřenositelné. Předměty je možné sebrat a odhodit. Na
-<br>některé nepřátele je potřeba i více než jeden předmět. Po poražení některých nepřátel můžou
-<br>vypadnout některé předměty. Maximální kapacita inventáře je 6 předmětů. Předměty nejdou
-<br>sebrat, pokud se v prostoru nachází nepřítel a také nelze projít do dalších prostor. Dá se pouze
-<br>jít zpět. K poražení posledního protivníka (Gul’Dana) je potřeba mít v batohu 6 určitých
-<br>předmětů. Je zde možnost prohrát a to například úmrtím. Hráč má celkem 3 životy. K výhře
-<br>dojde použitim příkazu sebrat na princeznu.
+<br>V adventure hrajete za rytire, ktery byl poveren, aby zachranil princeznu, ktera byla unesena
+<br>Gul'Danem z vaseho kralovstvi. Ukol je tedy princeznu zachranit. V adventure jsou
+<br>predmety, nektere jsou potrebne k porazeni nepratel, kteri se budou na ceste objevovat,
+<br>nektere predmety jsou zbytecne ci neprenositelne. Predmety je mozne sebrat ci odhodit. K
+<br>porazeni nekterych nepratel je potreba vice nez jeden predmetu. Po porazeni nekterych nepratel muzou
+<br>vypadnout nektere predmety. Maximalni kapacita inventare je 6 predmetu. Nelze projit do dalsi
+<br>mistnosti, pokud se v prostoru nachazi nepritel, je nutne ho nejdrive porazit. Da se pouze
+<br>jit zpet, do predesle mistnosti. K porazeni posledniho protivnika (Gul'Dana) je potreba mit v batohu 6 urcitych
+<br>predmetu. Je zde moznost prohrat a to napriklad umrtim. Hrac ma celkem 3 zivoty. K vyhre
+<br>dojde kliknutim na princeznu.
 
 </p>
